Controller responses are converted from list to page